--- a/.drone.yml
+++ b/.drone.yml
@@ -3,9 +3,9 @@ type: docker
 name: default
 
 steps:
-- name: greeting
+- name: Testing
   image: golang:1.20-alpine
   commands:
-    - "go build"
+    - "go build ./src"
     - "go test ./src"
     - "go test ./test"
