--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,6 @@ steps:
 - name: Testing
   image: golang:1.20-alpine
   commands:
-    - "go build ./src"
+    - "cd ./src && go build"
     - "go test ./src"
     - "go test ./test"
