--- a/.drone.yml
+++ b/.drone.yml
@@ -11,29 +11,11 @@ steps:
     - "go test ../test -v"
 
 - name: build
-  image: docker:dind
+  image: docker:20
   commands:
     - docker build -t my-golang-app .
-  volumes:
-  - name: dockersock
-    path: /var/run
 
 - name: run
-  image: docker:dind
+  image: docker:20
   commands:
     - docker run -d -p 8080:8080 my-golang-app
-  volumes:
-  - name: dockersock
-    path: /var/run
-
-services:
-- name: docker
-  image: docker:dind
-  privileged: true
-  volumes:
-  - name: dockersock
-    path: /var/run
-
-volumes:
-- name: dockersock
-  temp: {}
