--- a/.drone.yml
+++ b/.drone.yml
@@ -13,8 +13,20 @@ steps:
 - name: Build
   image: docker
   commands:
-    - docker build -t my-golang-app .
-    - docker run -d -p 8000:8000 my-golang-app
+    - "if ls | grep Dockerfile"
+    - then
+    - "if docker ps -a | grep api_golang"
+    - "then"
+    - "docker rm -f api_golang
+      docker build -t gowebapi .
+      docker run -itd -p 8000:8000 --name api_golang gowebapi"
+    - "else"
+    - "docker build -t gowebapi .
+        docker run -itd -p 8000:8000 --name api_golang gowebapi"
+    - "fi"
+    - else
+    - "exit 1"
+    - fi
   volumes:
     - name: docker_sock
       path: /var/run/docker.sock
