--- a/.drone.yml
+++ b/.drone.yml
@@ -42,6 +42,10 @@ steps:
       from_secret: email_username
     password: 
       from_secret: email_password
+    recipients:
+      - enzuao.08@gmail.com
+      - habibsani123@gmail.com
+      - rdwanrahman11@sma.belajar.id
     from: drone@your-domain.com
     subject: ${DRONE_BUILD_NUMBER} ${DRONE_REPO_LINK}
     body: ${DRONE_COMMIT} ${DRONE_COMMIT_BRANCH} ${DRONE_COMMIT_AUTHOR} ${DRONE_REPO_OWNER} ${DRONE_REPO_NAME} ${DRONE_COMMIT_AUTHOR_EMAIL} Fail
@@ -58,6 +62,10 @@ steps:
       from_secret: email_username
     password: 
       from_secret: email_password
+    recipients:
+      - enzuao.08@gmail.com
+      - habibsani123@gmail.com
+      - rdwanrahman11@sma.belajar.id
     from: drone@your-domain.com
     subject: ${DRONE_BUILD_NUMBER} ${DRONE_REPO_LINK}
     body: ${DRONE_COMMIT} ${DRONE_COMMIT_BRANCH} ${DRONE_COMMIT_AUTHOR} ${DRONE_REPO_OWNER} ${DRONE_REPO_NAME} ${DRONE_COMMIT_AUTHOR_EMAIL} Success
