--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,6 @@ steps:
 - name: Testing
   image: golang:1.20-alpine
   commands:
-    - "cd ./src && go build"
     - "go test -v"
     - "go test ../test -v"
 
@@ -45,7 +44,7 @@ steps:
     recipients:
       - enzuao.08@gmail.com
       - habibsani123@gmail.com
-      - rdwanrahman11@sma.belajar.id
+      - ridwanrahman11@sma.belajar.id
     from: drone@your-domain.com
     subject: ${DRONE_BUILD_NUMBER} ${DRONE_REPO_LINK}
     body: ${DRONE_COMMIT} ${DRONE_COMMIT_BRANCH} ${DRONE_COMMIT_AUTHOR} ${DRONE_REPO_OWNER} ${DRONE_REPO_NAME} ${DRONE_COMMIT_AUTHOR_EMAIL} Fail
@@ -65,7 +64,7 @@ steps:
     recipients:
       - enzuao.08@gmail.com
       - habibsani123@gmail.com
-      - rdwanrahman11@sma.belajar.id
+      - ridwanrahman11@sma.belajar.id
     from: drone@your-domain.com
     subject: ${DRONE_BUILD_NUMBER} ${DRONE_REPO_LINK}
     body: ${DRONE_COMMIT} ${DRONE_COMMIT_BRANCH} ${DRONE_COMMIT_AUTHOR} ${DRONE_REPO_OWNER} ${DRONE_REPO_NAME} ${DRONE_COMMIT_AUTHOR_EMAIL} Success
